--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,4 +1,9 @@
 name: "Ensure labels"
+
+permissions:
+  contents: read
+  pull-requests: read
+
 on: # yamllint disable-line rule:truthy
   pull_request:
     types:
