--- a/.generator/pyproject.toml
+++ b/.generator/pyproject.toml
@@ -8,7 +8,7 @@ license = "Apache-2.0"
 [tool.poetry.dependencies]
 python = "^3.10"
 click = "^8.1.4"
-PyYAML = "^6.0"
+pyyaml = "^6.0"
 jsonref = "^1.1.0"
 jinja2 = "^3.1.2"
 pytest = "^7.4.0"
