--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ concurrency:
 
 jobs:
   pre-commit:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     if: >
       (github.event.pull_request.draft == false &&
        !contains(github.event.pull_request.labels.*.name, 'ci/skip') &&
