--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,10 +25,10 @@ jobs:
         with:
           ref: ${{ github.event.release.tag_name }}
 
-      - name: Set up Ruby 2.7
-        uses: ruby/setup-ruby@v1
+      - name: Set up Ruby 3.4.3
+        uses: ruby/setup-ruby@eaecf785f6a34567a6d97f686bbb7bccc1ac1e5c  # v1.237.0
         with:
-          ruby-version: 2.7
+          ruby-version: 3.4.3
 
       - run: bundle install
 
