--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,8 @@ permissions:
 on:
   release:
     types:
-      - published
+      - prereleased
+      - released
 
 jobs:
   build:
@@ -19,18 +20,18 @@ jobs:
       id-token: write # IMPORTANT: this permission is mandatory for trusted publishing
       contents: write # IMPORTANT: this permission is required for `rake release` to push the release tag
 
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'release' && github.event.action == 'published')
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          ref: ${{ github.event.release.tag_name }}
+          fetch-depth: 1
 
       - name: Set up Ruby 3.4.3
         uses: ruby/setup-ruby@eaecf785f6a34567a6d97f686bbb7bccc1ac1e5c  # v1.237.0
         with:
           ruby-version: 3.4.3
 
-      - run: bundle install
+      - name: Install dependencies
+        run: bundle install
 
-      - name: Publish to RubyGems
+      - name: Publishing tag ${{ github.event.release.tag_name }} to RubyGems
         uses: rubygems/release-gem@a25424ba2ba8b387abc8ef40807c2c85b96cbe32 # v1.1.1
