--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,8 +30,16 @@ jobs:
         with:
           ruby-version: 3.4.3
 
-      - name: Install dependencies
-        run: bundle install
+      - name: Install dependencies ${{ github.event.release.tag_name }}
+        run: |
+          # Get tag name from event
+          tag_name="${{ github.event.release.tag_name }}"
+
+          if [[ ! "$tag_name" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            cd $(echo $tag_name | rev | cut -d'/' -f2- | rev)
+          fi
+
+          bundle install
 
       - name: Publishing tag ${{ github.event.release.tag_name }} to RubyGems
         uses: rubygems/release-gem@a25424ba2ba8b387abc8ef40807c2c85b96cbe32 # v1.1.1
