--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
           # Get tag name from event
           tag_name="${{ github.event.release.tag_name }}"
 
-          if [[ ! "$tag_name" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+          if [[ ! "$tag_name" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
             cd $(echo $tag_name | rev | cut -d'/' -f2- | rev)
           fi
 
