--- a/.github/workflows/reusable-integration-test.yml
+++ b/.github/workflows/reusable-integration-test.yml
@@ -1,10 +1,12 @@
-name: Run Integration Tests
+name: Reusable Integration Test Workflow
 
 permissions:
   contents: read
 
 on:
   pull_request:
+    branches:
+      - master
     types:
       - opened
       - reopened
@@ -12,10 +14,48 @@ on:
       - synchronize
       - labeled
       - unlabeled
-    branches:
-      - master
   schedule:
     - cron: "0 2 * * *"
+  workflow_call:
+    inputs:
+      target-branch:
+        description: 'Branch to checkout and test (defaults to the calling branch)'
+        required: false
+        type: string
+        default: ''
+      enable-status-reporting:
+        description: 'Whether to post status checks to datadog-api-spec repo'
+        required: false
+        type: boolean
+        default: false
+      status-context:
+        description: 'Context for status checks'
+        required: false
+        type: string
+        default: 'integration'
+      target-repo:
+        description: 'Repository to post status to'
+        required: false
+        type: string
+        default: 'datadog-api-spec'
+      cache-version:
+        description: 'Cache version for gem dependencies'
+        required: false
+        type: string
+        default: ''
+    secrets:
+      PIPELINE_GITHUB_APP_ID:
+        required: false
+      PIPELINE_GITHUB_APP_PRIVATE_KEY:
+        required: false
+      DD_API_KEY:
+        required: true
+      DD_CLIENT_API_KEY:
+        required: true
+      DD_CLIENT_APP_KEY:
+        required: true
+      SLEEP_AFTER_REQUEST:
+        required: false
 
 concurrency:
   group: integration-${{ github.head_ref }}
@@ -48,17 +88,20 @@ jobs:
         with:
           app-id: ${{ secrets.PIPELINE_GITHUB_APP_ID }}
           private-key: ${{ secrets.PIPELINE_GITHUB_APP_PRIVATE_KEY }}
-          repositories: datadog-api-spec
+          repositories: ${{ inputs.target-repo || 'datadog-api-spec' }}
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          repository: DataDog/datadog-api-client-ruby
+          ref: ${{ inputs.target-branch || github.ref }}
       - name: Post pending status check
-        if: github.event_name == 'pull_request' && contains(github.event.pull_request.head.ref, 'datadog-api-spec/generated/')
+        if: github.event_name == 'pull_request' && contains(github.event.pull_request.head.ref, 'datadog-api-spec/generated/') && (inputs.enable-status-reporting || github.event_name != 'workflow_call')
         uses: DataDog/github-actions/post-status-check@v2
         with:
           github-token: ${{ steps.get_token.outputs.token }}
-          repo: datadog-api-spec
+          repo: ${{ inputs.target-repo || 'datadog-api-spec' }}
           status: pending
-          context: integration
+          context: ${{ inputs.status-context || 'integration' }}
       - name: Install system zstd
         run: |
           sudo apt-get -y install zstd
@@ -68,7 +111,7 @@ jobs:
         with:
           ruby-version: "3.2"
           bundler-cache: true
-          cache-version: ${{ secrets.CACHE_VERSION }}
+          cache-version: ${{ inputs.cache-version }}
       - name: Install deps
         run: bundle install
       - name: Run integration tests
@@ -84,20 +127,20 @@ jobs:
           DD_TEST_CLIENT_APP_KEY: ${{ secrets.DD_CLIENT_APP_KEY }}
           DD_TRACE_ANALYTICS_ENABLED: "true"
           RECORD: "none"
-          SLEEP_AFTER_REQUEST: "${{ vars.SLEEP_AFTER_REQUEST }}"
+          SLEEP_AFTER_REQUEST: ${{ secrets.SLEEP_AFTER_REQUEST || vars.SLEEP_AFTER_REQUEST }}
       - name: Post failure status check
-        if: failure() && github.event_name == 'pull_request' && contains(github.event.pull_request.head.ref, 'datadog-api-spec/generated/')
+        if: failure() && github.event_name == 'pull_request' && contains(github.event.pull_request.head.ref, 'datadog-api-spec/generated/') && (inputs.enable-status-reporting || github.event_name != 'workflow_call')
         uses: DataDog/github-actions/post-status-check@v2
         with:
           github-token: ${{ steps.get_token.outputs.token }}
-          repo: datadog-api-spec
+          repo: ${{ inputs.target-repo || 'datadog-api-spec' }}
           status: failure
-          context: integration
+          context: ${{ inputs.status-context || 'integration' }}
       - name: Post success status check
-        if: "!failure() && github.event_name == 'pull_request' && contains(github.event.pull_request.head.ref, 'datadog-api-spec/generated/')"
+        if: "!failure() && github.event_name == 'pull_request' && contains(github.event.pull_request.head.ref, 'datadog-api-spec/generated/') && (inputs.enable-status-reporting || github.event_name != 'workflow_call')"
         uses: DataDog/github-actions/post-status-check@v2
         with:
           github-token: ${{ steps.get_token.outputs.token }}
-          repo: datadog-api-spec
+          repo: ${{ inputs.target-repo || 'datadog-api-spec' }}
           status: success
-          context: integration
+          context: ${{ inputs.status-context || 'integration' }}
