--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,103 +20,45 @@ concurrency:
 
 jobs:
   pre-commit:
-    runs-on: ubuntu-latest
     if: >
       (github.event.pull_request.draft == false &&
        !contains(github.event.pull_request.labels.*.name, 'ci/skip') &&
        !contains(github.event.pull_request.head.ref, 'datadog-api-spec/test/')) ||
       github.event_name == 'schedule'
-    steps:
-      - name: Get GitHub App token
-        id: get_token
-        uses: actions/create-github-app-token@v1
-        with:
-          app-id: ${{ secrets.PIPELINE_GITHUB_APP_ID }}
-          private-key: ${{ secrets.PIPELINE_GITHUB_APP_PRIVATE_KEY }}
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha }}
-          token: ${{ steps.get_token.outputs.token }}
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - name: Install pre-commit
-        run: python -m pip install pre-commit
-      - name: set PY
-        run: echo "PY=$(python -c 'import platform;print(platform.python_version())')" >> $GITHUB_ENV
-      - uses: actions/cache@v3
-        with:
-          path: ~/.cache/pre-commit
-          key: pre-commit|${{ env.PY }}|${{ hashFiles('.pre-commit-config.yaml') }}
-      - id: pre_commit
-        name: Run pre-commit
-        if: github.event.action != 'closed' && github.event.pull_request.merged != true
-        run: |
-          pre-commit run --from-ref "${FROM_REF}" --to-ref "${TO_REF}" --show-diff-on-failure --color=always
-        env:
-          FROM_REF: ${{ github.event.pull_request.base.sha }}
-          TO_REF: ${{ github.event.pull_request.head.sha }}
-      - name: Commit changes
-        if: ${{ failure() }}
-        run: |-
-          git add -A
-          git config user.name "${GIT_AUTHOR_NAME}"
-          git config user.email "${GIT_AUTHOR_EMAIL}"
-          git commit -m "pre-commit fixes"
-          git push origin "HEAD:${HEAD_REF}"
-          exit 1
-        env:
-          HEAD_REF: ${{ github.event.pull_request.head.ref }}
-      - id: pre_commit_schedule
-        name: Run pre-commit in schedule
-        if: github.event_name == 'schedule'
-        run: |
-          pre-commit run --all-files --show-diff-on-failure --color=always
+    uses: ./.github/workflows/reusable-pre-commit.yml
+    with:
+      enable-commit-changes: true
+    secrets:
+      PIPELINE_GITHUB_APP_ID: ${{ secrets.PIPELINE_GITHUB_APP_ID }}
+      PIPELINE_GITHUB_APP_PRIVATE_KEY: ${{ secrets.PIPELINE_GITHUB_APP_PRIVATE_KEY }}
 
   test:
-    strategy:
-      matrix:
-        ruby-version: ["2.7", "3.2", "jruby-9.4.12.0"]
-        platform: [ubuntu-latest]
-    runs-on: ${{ matrix.platform }}
-    if: (github.event.pull_request.draft == false && !contains(github.event.pull_request.labels.*.name, 'ci/skip') && !contains(github.event.pull_request.head.ref, 'datadog-api-spec/test/')) || github.event_name == 'schedule'
-    env:
-      BUNDLE_WITHOUT: docs
-      DD_PROFILING_NO_EXTENSION: true
-      DD_CIVISIBILITY_AGENTLESS_ENABLED: true
-      DD_ENV: prod
+    if: >
+      (github.event.pull_request.draft == false &&
+       !contains(github.event.pull_request.labels.*.name, 'ci/skip') &&
+       !contains(github.event.pull_request.head.ref, 'datadog-api-spec/test/')) ||
+      github.event_name == 'schedule'
+    uses: ./.github/workflows/reusable-ruby-test.yml
+    with:
+      ruby-versions: '["2.7", "3.2", "jruby-9.4.12.0"]'
+      platforms: '["ubuntu-latest"]'
+      test-script: './run-tests.sh'
+      cache-version: ${{ vars.CACHE_VERSION }}
+    secrets:
+      PIPELINE_GITHUB_APP_ID: ${{ secrets.PIPELINE_GITHUB_APP_ID }}
+      PIPELINE_GITHUB_APP_PRIVATE_KEY: ${{ secrets.PIPELINE_GITHUB_APP_PRIVATE_KEY }}
       DD_API_KEY: ${{ secrets.DD_API_KEY }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Ruby ${{ matrix.ruby-version }}
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: ${{ matrix.ruby-version }}
-          bundler-cache: true
-          # modify repository variable when there are problems with installing gems
-          cache-version: ${{ vars.CACHE_VERSION }}
-      - name: Test
-        run: ./run-tests.sh
-        shell: bash
 
   examples:
-    runs-on: ubuntu-latest
-    if: (github.event.pull_request.draft == false && !contains(github.event.pull_request.labels.*.name, 'ci/skip') && !contains(github.event.pull_request.head.ref, 'datadog-api-spec/test/')) || github.event_name == 'schedule'
-    env:
-      DD_PROFILING_NO_EXTENSION: true
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: "2.7"
-          bundler-cache: true
-          # modify repository variable when there are problems with installing gems
-          cache-version: ${{ vars.CACHE_VERSION }}
-      - name: Check examples
-        run: ./check-examples.sh
-        shell: bash
+    if: >
+      (github.event.pull_request.draft == false &&
+       !contains(github.event.pull_request.labels.*.name, 'ci/skip') &&
+       !contains(github.event.pull_request.head.ref, 'datadog-api-spec/test/')) ||
+      github.event_name == 'schedule'
+    uses: ./.github/workflows/reusable-examples.yml
+    with:
+      examples-script: './check-examples.sh'
+      cache-version: ${{ vars.CACHE_VERSION }}
 
   report:
     runs-on: ubuntu-latest
@@ -133,10 +75,10 @@ jobs:
           app-id: ${{ secrets.PIPELINE_GITHUB_APP_ID }}
           private-key: ${{ secrets.PIPELINE_GITHUB_APP_PRIVATE_KEY }}
           repositories: datadog-api-spec
-      - name: Post status 3heck
+      - name: Post status check
         uses: DataDog/github-actions/post-status-check@v2
         with:
           github-token: ${{ steps.get_token.outputs.token }}
           repo: datadog-api-spec
-          status: ${{ (needs.test.result == 'cancelled' || needs.examples.result == 'cancelled') && 'pending' || needs.test.result == 'success' && needs.examples.result == 'success' && 'success' || 'failure' }}
+          status: ${{ (needs.test.result == 'cancelled' || needs.examples.result == 'cancelled') && 'pending' || (needs.test.result == 'success' && needs.examples.result == 'success') && 'success' || 'failure' }}
           context: master/unit
