--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
           token: ${{ steps.get_token.outputs.token }}
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install pre-commit
         run: python -m pip install pre-commit
       - name: set PY
@@ -97,7 +97,7 @@ jobs:
           # modify repository variable when there are problems with installing gems
           cache-version: ${{ vars.CACHE_VERSION }}
       - name: Test
-        run: ./run-tests.sh
+        run: RUBYOPT="-rjson/pure" ./run-tests.sh
         shell: bash
 
   examples:
