fix the concurrency group of the integration workflow

--- a/.github/workflows/reusable-integration-test.yml
+++ b/.github/workflows/reusable-integration-test.yml
@@ -63,7 +63,7 @@ on:
         required: false
 
 concurrency:
-  group: integration-${{ github.head_ref }}
+  group: integration-ruby-${{ inputs.target-branch || github.head_ref }}
   cancel-in-progress: true
 
 jobs:
